Use MetricConstants for declared metric names.
Move MetricConstants from wres-datamodel to to wres-config and
use it for declared metric names.

Refs #113677