@@ -1,13 +1,8 @@
 package wres.datamodel.thresholds;
 
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThrows;
-import static org.junit.Assert.assertTrue;
-
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.EnumMap;
 import java.util.HashSet;
 import java.util.List;
@@ -15,8 +10,15 @@ import java.util.Map;
 import java.util.Set;
 import java.util.SortedSet;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
+import wres.config.MetricConfigException;
+import wres.config.MetricConstantsFactory;
 import wres.config.generated.DestinationConfig;
 import wres.config.generated.EnsembleAverageType;
 import wres.config.generated.MetricConfig;
@@ -31,7 +33,8 @@ import wres.config.generated.ThresholdOperator;
 import wres.config.generated.ThresholdType;
 import wres.config.generated.ThresholdsConfig;
 import wres.datamodel.OneOrTwoDoubles;
-import wres.datamodel.metrics.MetricConstants;
+import wres.config.MetricConstants;
+import wres.datamodel.pools.MeasurementUnit;
 import wres.datamodel.thresholds.ThresholdConstants.Operator;
 
 /**
@@ -39,7 +42,7 @@ import wres.datamodel.thresholds.ThresholdConstants.Operator;
  * 
  * @author James Brown
  */
-public final class ThresholdsGeneratorTest
+class ThresholdsGeneratorTest
 {
 
     /**
@@ -49,7 +52,7 @@ public final class ThresholdsGeneratorTest
     private static final String TEST_THRESHOLDS = "0.1,0.2,0.3";
 
     @Test
-    public void testGetThresholdsFromConfig()
+    void testGetThresholdsFromConfig()
     {
         List<MetricConfig> testMetrics = new ArrayList<>();
         testMetrics.add( new MetricConfig( null, MetricConfigName.BIAS_FRACTION ) );
@@ -66,16 +69,16 @@ public final class ThresholdsGeneratorTest
         ProjectConfig mockedConfig =
                 new ProjectConfig( null,
                                    null,
-                                   Arrays.asList( new MetricsConfig( testThresholds,
-                                                                     0,
-                                                                     testMetrics,
-                                                                     null,
-                                                                     EnsembleAverageType.MEAN ) ),
-                                   new Outputs( Arrays.asList( new DestinationConfig( OutputTypeSelection.THRESHOLD_LEAD,
-                                                                                      null,
-                                                                                      null,
-                                                                                      null,
-                                                                                      null ) ),
+                                   List.of( new MetricsConfig( testThresholds,
+                                                               0,
+                                                               testMetrics,
+                                                               null,
+                                                               EnsembleAverageType.MEAN ) ),
+                                   new Outputs( List.of( new DestinationConfig( OutputTypeSelection.THRESHOLD_LEAD,
+                                                                                null,
+                                                                                null,
+                                                                                null,
+                                                                                null ) ),
                                                 null ),
                                    null,
                                    null );
@@ -143,11 +146,11 @@ public final class ThresholdsGeneratorTest
                                                    null,
                                                    null,
                                                    null ),
-                                   Arrays.asList( new MetricsConfig( thresholds,
-                                                                     0,
-                                                                     metrics,
-                                                                     null,
-                                                                     EnsembleAverageType.MEAN ) ),
+                                   List.of( new MetricsConfig( thresholds,
+                                                               0,
+                                                               metrics,
+                                                               null,
+                                                               EnsembleAverageType.MEAN ) ),
                                    null,
                                    null,
                                    null );
@@ -163,7 +166,7 @@ public final class ThresholdsGeneratorTest
     }
 
     @Test
-    public void testGetThresholdsFromConfigIncludesDichotomousScoresWithoutDecisionThresholds()
+    void testGetThresholdsFromConfigIncludesDichotomousScoresWithoutDecisionThresholds()
     {
         List<MetricConfig> testMetrics = new ArrayList<>();
         testMetrics.add( new MetricConfig( null, MetricConfigName.BIAS_FRACTION ) );
@@ -181,16 +184,16 @@ public final class ThresholdsGeneratorTest
         ProjectConfig mockedConfig =
                 new ProjectConfig( null,
                                    null,
-                                   Arrays.asList( new MetricsConfig( testThresholds,
-                                                                     0,
-                                                                     testMetrics,
-                                                                     null,
-                                                                     EnsembleAverageType.MEAN ) ),
-                                   new Outputs( Arrays.asList( new DestinationConfig( OutputTypeSelection.THRESHOLD_LEAD,
-                                                                                      null,
-                                                                                      null,
-                                                                                      null,
-                                                                                      null ) ),
+                                   List.of( new MetricsConfig( testThresholds,
+                                                               0,
+                                                               testMetrics,
+                                                               null,
+                                                               EnsembleAverageType.MEAN ) ),
+                                   new Outputs( List.of( new DestinationConfig( OutputTypeSelection.THRESHOLD_LEAD,
+                                                                                null,
+                                                                                null,
+                                                                                null,
+                                                                                null ) ),
                                                 null ),
                                    null,
                                    null );
@@ -260,11 +263,11 @@ public final class ThresholdsGeneratorTest
                                                    null,
                                                    null,
                                                    null ),
-                                   Arrays.asList( new MetricsConfig( thresholds,
-                                                                     0,
-                                                                     metrics,
-                                                                     null,
-                                                                     EnsembleAverageType.MEAN ) ),
+                                   List.of( new MetricsConfig( thresholds,
+                                                               0,
+                                                               metrics,
+                                                               null,
+                                                               EnsembleAverageType.MEAN ) ),
                                    null,
                                    null,
                                    null );
@@ -280,7 +283,7 @@ public final class ThresholdsGeneratorTest
     }
 
     @Test
-    public void testGetThresholdsFromConfigWhenNoThresholdsPresent()
+    void testGetThresholdsFromConfigWhenNoThresholdsPresent()
     {
         List<MetricConfig> metrics = new ArrayList<>();
         metrics.add( new MetricConfig( null, MetricConfigName.BIAS_FRACTION ) );
@@ -305,11 +308,11 @@ public final class ThresholdsGeneratorTest
                                                    null,
                                                    null,
                                                    null ),
-                                   Arrays.asList( new MetricsConfig( null,
-                                                                     0,
-                                                                     metrics,
-                                                                     null,
-                                                                     EnsembleAverageType.MEAN ) ),
+                                   List.of( new MetricsConfig( null,
+                                                               0,
+                                                               metrics,
+                                                               null,
+                                                               EnsembleAverageType.MEAN ) ),
                                    null,
                                    null,
                                    null );
@@ -334,35 +337,35 @@ public final class ThresholdsGeneratorTest
     }
 
     @Test
-    public void testGetThresholdOperator()
+    void testGetThresholdOperator()
     {
         ThresholdsConfig first = new ThresholdsConfig( null,
                                                        null,
                                                        null,
                                                        ThresholdOperator.GREATER_THAN );
-        assertTrue( ThresholdsGenerator.getThresholdOperator( first ) == Operator.GREATER );
+        assertSame( Operator.GREATER, ThresholdsGenerator.getThresholdOperator( first ) );
 
         ThresholdsConfig second = new ThresholdsConfig( null,
                                                         null,
                                                         null,
                                                         ThresholdOperator.LESS_THAN );
-        assertTrue( ThresholdsGenerator.getThresholdOperator( second ) == Operator.LESS );
+        assertSame( Operator.LESS, ThresholdsGenerator.getThresholdOperator( second ) );
 
         ThresholdsConfig third = new ThresholdsConfig( null,
                                                        null,
                                                        null,
                                                        ThresholdOperator.GREATER_THAN_OR_EQUAL_TO );
-        assertTrue( ThresholdsGenerator.getThresholdOperator( third ) == Operator.GREATER_EQUAL );
+        assertSame( Operator.GREATER_EQUAL, ThresholdsGenerator.getThresholdOperator( third ) );
 
         ThresholdsConfig fourth = new ThresholdsConfig( null,
                                                         null,
                                                         null,
                                                         ThresholdOperator.LESS_THAN_OR_EQUAL_TO );
-        assertTrue( ThresholdsGenerator.getThresholdOperator( fourth ) == Operator.LESS_EQUAL );
+        assertSame( Operator.LESS_EQUAL, ThresholdsGenerator.getThresholdOperator( fourth ) );
 
         //Test exception cases
         assertThrows( NullPointerException.class,
-                      () -> ThresholdsGenerator.getThresholdOperator( (ThresholdsConfig) null ) );
+                      () -> ThresholdsGenerator.getThresholdOperator( null ) );
         assertThrows( NullPointerException.class,
                       () -> ThresholdsGenerator.getThresholdOperator( new ThresholdsConfig( null,
                                                                                             null,
@@ -375,7 +378,7 @@ public final class ThresholdsGeneratorTest
      */
 
     @Test
-    public void testGetThresholdDataType()
+    void testGetThresholdDataType()
     {
         // Check that a mapping exists in the data model ThresholdDataType for all entries in the 
         // config ThresholdDataType
@@ -391,7 +394,7 @@ public final class ThresholdsGeneratorTest
      */
 
     @Test
-    public void testGetThresholdDataTypeThrowsNPEWhenInputIsNull()
+    void testGetThresholdDataTypeThrowsNPEWhenInputIsNull()
     {
         assertThrows( NullPointerException.class,
                       () -> ThresholdsGenerator.getThresholdDataType( null ) );
@@ -402,7 +405,7 @@ public final class ThresholdsGeneratorTest
      */
 
     @Test
-    public void testGetThresholdGroup()
+    void testGetThresholdGroup()
     {
         // Check that a mapping exists in ThresholdGroup for all entries in the ThresholdType
         for ( ThresholdType next : ThresholdType.values() )
@@ -417,9 +420,181 @@ public final class ThresholdsGeneratorTest
      */
 
     @Test
-    public void testGetThresholdGroupThrowsNPEWhenInputIsNull()
+    void testGetThresholdGroupThrowsNPEWhenInputIsNull()
     {
         assertThrows( NullPointerException.class,
                       () -> ThresholdsGenerator.getThresholdGroup( null ) );
+    }
+
+    /**
+     * Tests the {@link ThresholdsGenerator#getThresholdsFromConfig(ProjectConfig)} by comparing actual results to
+     * expected results for a scenario where external thresholds are defined, together with a dimension for value
+     * thresholds.
+     * @throws MetricConfigException if an unexpected exception is encountered
+     */
+
+    @org.junit.jupiter.api.Test
+    void testGetThresholdsFromConfigWithExternalThresholdsAndDimension()
+    {
+
+        // Obtain the threshold dimension
+        MeasurementUnit dimension = MeasurementUnit.of( "CMS" );
+
+        // Mock some metrics
+        List<MetricConfig> metrics = new ArrayList<>();
+        metrics.add( new MetricConfig( null, MetricConfigName.BIAS_FRACTION ) );
+
+        // Mock some thresholds
+        List<ThresholdsConfig> thresholds = new ArrayList<>();
+        thresholds.add( new ThresholdsConfig( ThresholdType.VALUE,
+                                              ThresholdDataType.LEFT,
+                                              "0.1,0.2",
+                                              ThresholdOperator.GREATER_THAN ) );
+
+        ProjectConfig mockedConfig =
+                new ProjectConfig( null,
+                                   new PairConfig( "CMS",
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null,
+                                                   null ),
+                                   List.of( new MetricsConfig( thresholds,
+                                                               0,
+                                                               metrics,
+                                                               null,
+                                                               EnsembleAverageType.MEAN ) ),
+                                   null,
+                                   null,
+                                   null );
+
+        // Mock external thresholds
+        Map<MetricConstants, Set<ThresholdOuter>> mockExternal = new EnumMap<>( MetricConstants.class );
+        Set<ThresholdOuter> atomicExternal = new HashSet<>();
+        atomicExternal.add( ThresholdOuter.of( OneOrTwoDoubles.of( 0.3 ),
+                                               Operator.GREATER,
+                                               ThresholdConstants.ThresholdDataType.LEFT,
+                                               dimension ) );
+        mockExternal.put( MetricConstants.BIAS_FRACTION, atomicExternal );
+
+        ThresholdsByMetric.Builder builder = new ThresholdsByMetric.Builder();
+        builder.addThresholds( mockExternal, ThresholdConstants.ThresholdGroup.VALUE );
+        builder.addThresholds( ThresholdSlicer.getOneOrTwoThresholds( ThresholdsGenerator.getThresholdsFromConfig( mockedConfig ) ) );
+
+        ThresholdsByMetric actualByMetric = builder.build();
+
+        Map<MetricConstants, SortedSet<OneOrTwoThresholds>> actual =
+                ThresholdSlicer.getOneOrTwoThresholds( actualByMetric );
+
+        // Derive expected thresholds
+        Map<MetricConstants, Set<OneOrTwoThresholds>> expected = new EnumMap<>( MetricConstants.class );
+        Set<OneOrTwoThresholds> atomicThresholds = new HashSet<>();
+
+        atomicThresholds.add( OneOrTwoThresholds.of( ThresholdOuter.of( OneOrTwoDoubles.of( Double.NEGATIVE_INFINITY ),
+                                                                        Operator.GREATER,
+                                                                        ThresholdConstants.ThresholdDataType.LEFT_AND_RIGHT ) ) );
+        atomicThresholds.add( OneOrTwoThresholds.of( ThresholdOuter.of( OneOrTwoDoubles.of( 0.1 ),
+                                                                        Operator.GREATER,
+                                                                        ThresholdConstants.ThresholdDataType.LEFT,
+                                                                        dimension ) ) );
+        atomicThresholds.add( OneOrTwoThresholds.of( ThresholdOuter.of( OneOrTwoDoubles.of( 0.2 ),
+                                                                        Operator.GREATER,
+                                                                        ThresholdConstants.ThresholdDataType.LEFT,
+                                                                        dimension ) ) );
+        atomicThresholds.add( OneOrTwoThresholds.of( ThresholdOuter.of( OneOrTwoDoubles.of( 0.3 ),
+                                                                        Operator.GREATER,
+                                                                        ThresholdConstants.ThresholdDataType.LEFT,
+                                                                        dimension ) ) );
+
+        expected.put( MetricConstants.BIAS_FRACTION, atomicThresholds );
+
+        assertEquals( expected, actual );
+    }
+
+    /**
+     * Tests a method with private scope in {@link MetricConstantsFactory} using thresholds with a
+     * {@link Operator#BETWEEN} condition.
+     * @throws MetricConfigException if an unexpected exception is encountered
+     * @throws SecurityException if the reflection fails via a security manager
+     * @throws NoSuchMethodException if a matching method is not found
+     * @throws InvocationTargetException if the underlying method throws an exception
+     * @throws IllegalArgumentException if the instance method could not be invoked with the supplied arguments
+     * @throws IllegalAccessException if this Method object is enforcing Java language access control and the
+     *            underlying method is inaccessible.
+     */
+
+    @org.junit.jupiter.api.Test
+    void testGetThresholdsFromConfigWithBetweenCondition() throws NoSuchMethodException,
+            IllegalAccessException, InvocationTargetException
+    {
+
+        Method method =
+                ThresholdsGenerator.class.getDeclaredMethod( "getThresholdsFromCommaSeparatedValues",
+                                                             String.class,
+                                                             Operator.class,
+                                                             ThresholdConstants.ThresholdDataType.class,
+                                                             boolean.class,
+                                                             MeasurementUnit.class );
+        method.setAccessible( true );
+
+        // Test with probability thresholds
+        @SuppressWarnings( "unchecked" )
+        Set<ThresholdOuter> actual = (Set<ThresholdOuter>) method.invoke( null,
+                                                                          TEST_THRESHOLDS,
+                                                                          Operator.BETWEEN,
+                                                                          ThresholdConstants.ThresholdDataType.LEFT,
+                                                                          true,
+                                                                          null );
+
+        Set<ThresholdOuter> expected = new HashSet<>();
+        expected.add( ThresholdOuter.ofProbabilityThreshold( OneOrTwoDoubles.of( 0.1, 0.2 ),
+                                                             Operator.BETWEEN,
+                                                             ThresholdConstants.ThresholdDataType.LEFT ) );
+        expected.add( ThresholdOuter.ofProbabilityThreshold( OneOrTwoDoubles.of( 0.2, 0.3 ),
+                                                             Operator.BETWEEN,
+                                                             ThresholdConstants.ThresholdDataType.LEFT ) );
+        assertEquals( expected, actual );
+
+        // Test with value thresholds
+        @SuppressWarnings( "unchecked" )
+        Set<ThresholdOuter> actualValue = (Set<ThresholdOuter>) method.invoke( null,
+                                                                               TEST_THRESHOLDS,
+                                                                               Operator.BETWEEN,
+                                                                               ThresholdConstants.ThresholdDataType.LEFT,
+                                                                               false,
+                                                                               null );
+
+        Set<ThresholdOuter> expectedValue = new HashSet<>();
+        expectedValue.add( ThresholdOuter.of( OneOrTwoDoubles.of( 0.1, 0.2 ),
+                                              Operator.BETWEEN,
+                                              ThresholdConstants.ThresholdDataType.LEFT ) );
+        expectedValue.add( ThresholdOuter.of( OneOrTwoDoubles.of( 0.2, 0.3 ),
+                                              Operator.BETWEEN,
+                                              ThresholdConstants.ThresholdDataType.LEFT ) );
+
+
+        assertEquals( expectedValue, actualValue );
+
+        // Test exception
+        InvocationTargetException exception = assertThrows( InvocationTargetException.class,
+                                                                       () -> method.invoke( null,
+                                                                                            "0.1",
+                                                                                            Operator.BETWEEN,
+                                                                                            ThresholdConstants.ThresholdDataType.LEFT,
+                                                                                            false,
+                                                                                            null ) );
+        assertEquals( exception.getCause().getClass(), MetricConfigException.class );
     }
 }
